force-app/main/default/objects/Implant_Summary__c/Implant_Summary__c.object-meta.xml
<CustomObject>
    <label>Surgical Summary</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surgical Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>