force-app/main/default/objects/Implant_Summary__c/fields/Drills_Change__c.field-meta.xml
<CustomField>
    <fullName>Drills_Change__c</fullName>
    <formula>IF(Drills_PYTD__c &lt;&gt;0, (Drills_YTD__c - Drills_PYTD__c)/ABS(Drills_PYTD__c) , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drills % Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>