force-app/main/default/objects/Implant_Summary__c/fields/Drills_FPY__c.field-meta.xml
<CustomField>
    <fullName>Drills_FPY__c</fullName>
    <label>Drills FPY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>