force-app/main/default/objects/Implant_Summary__c/fields/Drills_PYTD__c.field-meta.xml
<CustomField>
    <fullName>Drills_PYTD__c</fullName>
    <label>Drills PYTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>