force-app/main/default/objects/Implant_Summary__c/fields/Eztetic_Change__c.field-meta.xml
<CustomField>
    <fullName>Eztetic_Change__c</fullName>
    <formula>IF(Eztetic_PYTD__c &lt;&gt; 0, (Eztetic_YTD__c - Eztetic_PYTD__c)/ABS(Eztetic_PYTD__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eztetic % Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>