force-app/main/default/objects/Implant_Summary__c/fields/Eztetic_YTD__c.field-meta.xml
<CustomField>
    <fullName>Eztetic_YTD__c</fullName>
    <label>Eztetic YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>