force-app/main/default/objects/Implant_Summary__c/fields/Implant_Item_2_FPY__c.field-meta.xml
<CustomField>
    <fullName>Implant_Item_2_FPY__c</fullName>
    <label>TSV/T/M FPY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>