force-app/main/default/objects/Implant_Summary__c/fields/Implant_Item_3_Perc_Change__c.field-meta.xml
<CustomField>
    <fullName>Implant_Item_3_Perc_Change__c</fullName>
    <formula>IF(Implant_Item_3_PYTD__c &lt;&gt;0, ( Implant_Item_3_YTD__c -  Implant_Item_3_PYTD__c )/ ABS(Implant_Item_3_PYTD__c),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certain % Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>