force-app/main/default/objects/Implant_Summary__c/fields/LODI_Change__c.field-meta.xml
<CustomField>
    <fullName>LODI_Change__c</fullName>
    <formula>IF(LODI_PYTD__c  &lt;&gt; 0, ((LODI_YTD__c - LODI_PYTD__c)/LODI_PYTD__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LODI % Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>