force-app/main/default/objects/Implant_Summary__c/fields/LODI_FPY__c.field-meta.xml
<CustomField>
    <fullName>LODI_FPY__c</fullName>
    <label>LODI FPY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>