force-app/main/default/objects/Implant_Summary__c/fields/LODI_YTD__c.field-meta.xml
<CustomField>
    <fullName>LODI_YTD__c</fullName>
    <label>LODI YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>