force-app/main/default/objects/Implant_Summary__c/fields/Surgical_Instruments_PYTD__c.field-meta.xml
<CustomField>
    <fullName>Surgical_Instruments_PYTD__c</fullName>
    <label>Surgical Instruments PYTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>